# jak-project

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  build_sm64jak.bat  controllers.txt  pyserver.py  release-pipeline.yaml  release_sm64jak.bat  test_bridge2_blender.py  test_bridge_blender.py  test_isolate2_blender.py  test_isolate3_blender.py  test_isolate4_blender.py  test_isolate_blender.py  test_load_blender.py  test_load_blender2.py  test_thin_blender.py  vendor.yaml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: config.yml  jak1-bug-report.yml  jak2-bug-report.yml
.github/workflows/: cut-release.yaml  draft-new-release.yaml  inform-pages-repo.yaml  linux-build-clang.yaml  release-pipeline.yaml  update-controller-db.yaml  windows-build-clang.yaml
OpenGOAL/jak1/settings/: pc-settings.gc
custom_levels/warp1/: test-zone.glb  warp1.gd  warp1.jsonc
custom_levels/warp2/: test-zone.glb  warp2.gd  warp2.jsonc
decompiler/ObjectFile/: ObjectFileDB_IR2.cpp
decompiler/config/jak2/: all-types.gc  anonymous_function_types.jsonc  inputs.jsonc  label_types.jsonc  type_casts.jsonc
decompiler/extractor/: extractor_util.cpp
decompiler/level_extractor/: extract_level.cpp
game/: CMakeLists.txt  curl.cpp  main.cpp  runtime.cpp
game/graphics/opengl_renderer/: BucketRenderer.cpp  OpenGLRenderer.cpp  OpenGLRenderer.h  SM64MarioRenderer.cpp  SM64MarioRenderer.h  Shader.cpp  Shader.h  debug_gui.cpp  debug_gui.h
game/graphics/opengl_renderer/foreground/: Merc2.cpp
game/graphics/opengl_renderer/shaders/: mario_sm64.frag  mario_sm64.vert  sm64_mario.frag  sm64_mario.vert
game/graphics/opengl_renderer/sprite/: GlowRenderer.cpp  Sprite3.cpp  SpriteRenderer.cpp
game/graphics/pipelines/: opengl.cpp
game/kernel/common/: kboot.h  kmachine.cpp
game/kernel/jak1/: kboot.cpp  kmachine.cpp  kmachine.h
game/kernel/jak2/: kmachine.cpp
game/libsm64/: MarioRenderer.cpp  MarioRenderer.h  libsm64_integration.cpp  libsm64_integration.h  sm64_audio.cpp  sm64_audio.h  sm64_debug_gui.cpp  sm64_debug_gui.h
game/mips2c/: mips2c_private.h
game/mods/: goalmod_parser.cpp  goalmod_parser.h  goalmod_types.h  mod_imgui.cpp  mod_imgui.h  mod_manager.cpp  mod_manager.h  mod_params.cpp  mod_params.h
game/overlord/jak3/: iso.cpp
game/sce/: iop.cpp  iop.h  libpad.cpp
game/settings/: settings.cpp  settings.h
game/sound/: sndshim.cpp  sndshim.h
game/system/: IOP_Kernel.cpp
game/system/hid/: input_bindings.h  input_manager.cpp
goal_src/jak1/: game.gp  kernel-defs.gc
goal_src/jak1/dgos/: bea.gd  game.gd
goal_src/jak1/engine/anim/: joint.gc
goal_src/jak1/engine/collide/: collide-cache.gc
goal_src/jak1/engine/common-obs/: basebutton.gc  collectables.gc  orb-cache.gc
goal_src/jak1/engine/entity/: entity.gc
goal_src/jak1/engine/game/: game-info.gc  powerups.gc  settings.gc
goal_src/jak1/engine/level/: level-info.gc  level.gc
goal_src/jak1/engine/mods/: put-custom-code-here.gc
goal_src/jak1/engine/mods/mario/: mario.gc
goal_src/jak1/levels/beach/: remote-aphid.gc  remote-crab.gc  remote-enemy.gc
goal_src/jak1/levels/ogre/: ogre-obs.gc
goal_src/jak1/levels/village2/: village2-obs.gc
goal_src/jak1/levels/village3/: village3-obs.gc
goal_src/jak1/levels/village_common/: villagep-obs.gc
goal_src/jak1/pc/: lib-jak-bridge.gc  pckernel-common.gc  pckernel-h.gc  pckernel-impl.gc  pckernel.gc
goal_src/jak1/pc/debug/: default-menu-pc.gc  pc-debug-common.gc
goal_src/jak1/pc/features/: autosplit.gc  speedruns.gc
goal_src/jak2/: game.gp  kernel-defs.gc
goal_src/jak2/dgos/: cpa.gd  daxp.gd  engine.gd  game.gd  kernel.gd  mechp.gd
goal_src/jak2/engine/ai/: enemy.gc
goal_src/jak2/engine/anim/: joint.gc
goal_src/jak2/engine/common_objs/: water.gc
goal_src/jak2/engine/entity/: entity.gc
goal_src/jak2/engine/game/: game-info.gc  main.gc
goal_src/jak2/engine/game/task/: task-control.gc
goal_src/jak2/engine/gfx/sky/: sky-tng.gc
goal_src/jak2/engine/gfx/sprite/: sprite.gc
goal_src/jak2/engine/level/: level.gc
goal_src/jak2/engine/process-drawable/: process-drawable.gc
goal_src/jak2/engine/ps2/: pad.gc
goal_src/jak2/engine/ui/progress/: progress.gc
goal_src/jak2/kernel/: gcommon.gc  gkernel.gc  gstring.gc
goal_src/jak2/levels/castle/boss/: castle-baron.gc
goal_src/jak2/levels/city/common/: civilian.gc  ctywide-tasks.gc  (+2 more)
goal_src/jak2/levels/common/: warp-gate.gc
goal_src/jak2/pc/: pckernel-impl.gc  pckernel.gc
goal_src/jak2/pc/debug/: default-menu-pc.gc  pc-debug-methods.gc
goal_src/jak2/pc/features/: autosplit-h.gc  autosplit.gc  speedruns.gc
goal_src/user/zed/: startup.gc
libjakopengoal/: CMakeLists.txt  README.md
libjakopengoal/blender/: test_dll_load.py  test_thin_dll.py
libjakopengoal/blender/libjakopengoal_blender/: __init__.py  gamepad.py  jak.py  setup_lib.py
libjakopengoal/include/: jak_ipc_protocol.h  libjakopengoal.h
libjakopengoal/src/: jak_bridge.cpp  jak_bridge.h  jak_bridge_state.cpp  jak_ipc_shm.cpp  jak_ipc_shm.h  jak_server_main.cpp  libjakopengoal.cpp  libjakopengoal_thin.cpp  runtime_launcher.cpp
libjakopengoal/test/: main.c  main_combined.c  main_visual.cpp  test_dll_bridge.cpp  test_dll_bridge2.cpp  test_dll_exec.cpp  test_dll_full.cpp  test_dll_isolate.cpp  test_dll_kboot.cpp  test_minimal_dll.cpp
mods/: GOALMOD_FORMAT.md  README.md  collision_viewer.goalmod  high_contrast.goalmod  ice_world.goalmod  low_lod.goalmod  smooth_120fps.goalmod  uncapped_framerate.goalmod  wireframe_world.goalmod
scripts/batch/: gk-release.bat  gk2-nobootKEYS.lnk
sm64-jak/: Makefile  test_jak_position.c
sm64-jak/src/audio/: external.c
sm64-jak/src/game/: hud.c  mario.c  mario_actions_cutscene.c  object_helpers.c  rendering_graph_node.c
sm64-jak/src/pc/: pc_main.c
sm64-jak/src/pc/controller/: controller_sdl2.c
sm64-jak/src/pc/gfx/: gfx_pc.c
sm64-jak/src/pc/jak/: jakopengoal.c  jakopengoal.h
sm64-jak/tools/: .gitignore
test/: CMakeLists.txt  test_sm64_integration.cpp
test/offline/config/jak2/: config.jsonc
tools/: CMakeLists.txt
tools/jak_model_exporter/: main.cpp
(+4 files in other folders)
